Full rework from proof-of-concept
Added bulb database, new api format, https support, better feedback etc etc etc